--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -97,11 +97,14 @@
       },
       "contact": {
         "title": "منصه المترجم",
-        "content": "المترجم هي منصة الترجمة المعتمدة الرائدة في المملكة العربية السعودية، المتخصصة في تقديم الترجمة المعتمدة لوثائق الهجرة والوثائق القانونية والشهادات. استمتع بالترجمة الأكثر دقة ومعتمدة في المملكة العربية السعودية.",
+        "content": "نحب ان نسمع منكم",
         "address": "العنوان",
+        "addressDesc": "تفضلوا بزيارتنا",
         "addressContent": "الرياض - المملكه العربيه السعوديه",
         "phone": "الهاتف",
-        "email": "البريد الالكترونى"
+        "phoneContetnt": "تحدثوا مع فريقنا المميز",
+        "email": "البريد الالكترونى",
+        "emailContent": "دردشوا مع فريقنا المميز"
       },
       "requests": {
         "create": "إنشاء طلب",
