--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -96,7 +96,7 @@
         "contact": "تواصل معنا"
       },
       "contact": {
-        "title": "منصه المترجم",
+        "title": "مرحبا بكم فى منصه المترجم",
         "content": "نحب ان نسمع منكم",
         "address": "العنوان",
         "addressDesc": "تفضلوا بزيارتنا",
