--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -96,7 +96,7 @@
         "contact": "Contact Us"
       },
       "contact": {
-        "title": "Almotarjim Platform",
+        "title": "Welcome To Almotarjim Platform",
         "content": "We Would Love To Hear From You",
         "address": "Address",
         "addressDesc": "Visit Our Office HQ",
